# Otus_T

./: .gitignore  .gitlab-ci.yml  Dockerfile  Pipfile  README.md  docker-compose.yaml
.github/workflows/: main.yml
Task_1/: Otus_hw_1.py
Task_2/: bus.py  main.py  plane.py  ship.py  transport.py  transport_exceptions.py  truck.py  vehicle.py
Task_3/: main.py  model.py
Task_4/: app.py  main.py
Task_4/static/css/: base.css
Task_4/templates/: base.html  contact.html  index.html
Task_4/views/: contact.py
my_class/: README.rst  app.py  config.py  db_client.py  main.py  migrate.py  pyproject.toml
my_class/models/: __init__.py  contact_model.py  database.py
my_class/static/css/: base.css
my_class/templates/: base.html  contact.html  contacts.html  index.html  thanks.html
my_class/tests/: test_my_class.py
my_class_dj/: db.sqlite3  manage.py
my_class_dj/my_class_app/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
my_class_dj/my_class_app/migrations/: 0001_initial.py
my_class_dj/my_class_app/templates/my_class_app/: base.html  index.html  signin.html  signup.html  student.html  teacher.html  teachers.html  thanks.html
my_class_dj/my_class_dj/: asgi.py  settings.py  settings_local.py  urls.py  wsgi.py
